chore: modify jvm args for gc logging